--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     command: >
       bash -c "/app/prestart.sh 
       && uvicorn app.main:app --host 0.0.0.0 --port 80"
-    etworks:
+    networks:
       servicenet:
         aliases:
           - cash
@@ -29,6 +29,8 @@ services:
       - postgres-data:/var/lib/postgresql/data
     env_file:
       - .env
+    networks:
+      internal:
     deploy:
       replicas: 1
 
@@ -38,3 +40,4 @@ volumes:
 networks:
   servicenet:
     external: true
+  internal:
