--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: hwc9169/nasomedia-cash-service:v1.2
+    image: hwc9169/nasomedia-cash-service:latest
     ports:
       - "83:80"
     env_file:
